# sushi-go-starter-kit

./: .gitignore  README.md
javascript/: README.md  sushi_go_client.js
python/: README.md  first_card_bot.py  pyproject.toml  sdk_bot.py  sushi_go_client.py  sushi_go_client2.py
python/examples/: simple_bot.py  smart_bot.py  tournament_bot.py
python/src/ao_games/: __init__.py  bot.py  connection.py  errors.py  game.py  protocol.py  rest.py  spectate.py  state.py  types.py
python/tests/: conftest.py  test_protocol.py  test_state.py  test_types.py
