[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ao_games"
version = "0.1.0"
description = "Python SDK for the Sushi Go game server"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["sushi-go", "game", "bot", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
async = ["aiohttp>=3.9", "websockets>=12.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
